@@ -1,3 +1,5 @@
+- Fix: Creation of AcademicYearCE should always create a correspondent ExecutionYear
+
 29.0.0 (04-04-2020)
 - Refactor: Deprecated PrecedentDegreeInformation slots cleanup
 - Refactor: Removal of organizational Units subclasses and unused methods
